--- a/src/portfolio-web/src/app/app.html
+++ b/src/portfolio-web/src/app/app.html
@@ -18,7 +18,7 @@
 <main class="app-main">
   <h1>{{ 'app.title' | translate }}</h1>
   <p>{{ 'app.hello' | translate }}</p>
-  <button matButton="filled">Button</button>
+  <app-download-resume-button></app-download-resume-button>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
