--- a/src/portfolio-web/src/app/shared/components/download-resume-button/download-resume-button.html
+++ b/src/portfolio-web/src/app/shared/components/download-resume-button/download-resume-button.html
@@ -1,2 +1,2 @@
 <!-- This corresponds the Boundary Object: "Download Resume Button" (model domain) -->
-<button matButton="filled" (click)="requestResume()">Download Resume</button>
+<button matButton="filled" (click)="requestResume()">{{ 'app.shared.download-resume-button' | translate }}</button>
