--- a/src/portfolio-web/src/app/shared/components/language-switcher/language-switcher.html
+++ b/src/portfolio-web/src/app/shared/components/language-switcher/language-switcher.html
@@ -2,7 +2,7 @@
 <!-- Language Menu Trigger -->
 <button matButton [matMenuTriggerFor]="menu">
   <mat-icon aria-hidden="false" aria-label="language icon" fontIcon="language"></mat-icon>
-  {{ label }}
+  {{ label() }}
 </button>
 <!-- Menu -->
 <mat-menu #menu="matMenu">
